--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -22,387 +22,13 @@ claro = #ebf0f4
 	font-style: normal;
 }
 
-// .icon-facetime-video:before {
-// 	content: "\e601";
-// }
-// .icon-angle-right:before {
-// 	content: "\e607";
-// }
-// .icon-angle-up:before {
-// 	content: "\e608";
-// }
-// .icon-envelope:before {
-// 	content: "\e602";
-// }
-// .icon-graduation:before {
-// 	content: "\e603";
-// }
-// .icon-user:before {
-// 	content: "\e604";
-// }
-// .icon-book:before {
-// 	content: "\e600";
-// }
-// .icon-directions:before {
-// 	content: "\e605";
-// }
-// .icon-ellipsis:before {
-// 	content: "\e60b";
-// }
-// .icon-twitter:before {
-// 	content: "\e606";
-// }
-// .icon-github:before {
-// 	content: "\e609";
-// }
-// .icon-lines:before {
-// 	content: "\e60a";
-// }
+// Break points
 
-article
-	background white
-	border-radius 5px
-	box-shadow 0 1px 0 rgba(black,.2)
-	margin .6em .5em
-	padding 0 0 1em 0
-	
-body 
-	background fondo
-	color gris
-	font-family texto
-	font-size 15px
+max-width=768px and max-width=800px
 
-h1
-	font-size 3em;
-	font-family titulo
-	font-weight normal
-	margin 0 0 .5em 0
-	text-align center
-	small
-		border-top 1px solid borde
-		color gris
-		display block
-		font-size .39em;
-		line-height -5em
-		margin .1em auto 0 auto 
-		max-width 17em
-
-h2
-	display inline-block
-	font-family mayuscula
-	font-weight normal
-	font-size 2em;
-	letter-spacing -3px
-	margin .5em 0 .5em 0
-
-h3
-	color azul
-	font-family mayuscula
-	font-weight normal
-	font-size 1.5em
-	letter-spacing -2px
-	margin .5em
-	text-align center
-	white-space normal
-
-header
-	img
-		display block
-		margin 1em auto 0 auto
-		width 80px
-
-footer
-	background azul
-	height 10em
-	.avatar
-		background white
-		display inline-block
-		float left
-		height 10em
-		position relative
-		width 9.5em
-		&:after
-			border-bottom solid 10em transparent
-			border-left solid 5em white
-			border-right solid 10px transparent
-			border-top solid 0 green
-			content ""
-			left 9.5em
-			position absolute
-			top 0px
-		img
-			border 2px solid white
-			border-radius 50%
-			box-shadow 0 0 2px black
-			height auto
-			left 1em
-			position absolute
-			top 1em
-			width 3em
-			z-index 5
-
-		p
-			color gris
-			font-size 1em
-			left 4em
-			line-height 1.1em;
-			position absolute
-			text-align left
-			top 1.5em
-			white-space nowrap
-			z-index 4
-
-	.social
-		position relative
-		// text-shadow 1px 1px 0px rgba(black,.5)
-		z-index 3
-		a
-			color white
-			font-family texto
-			font-size 1.5em
-			font-weight bold
-		.twitter
-		.github
-		.email
-			position absolute
-			transition all .2s ease
-			-webkit-transition all .2s ease
-			&:before
-				font-family icono
-				margin 0 .5em 0 0
-				vertical-align bottom
-
-		.twitter
-			right .5em
-			text-decoration none
-			top .7em
-			&:before
-				content "\e606"
-			&:hover
-				color #21b2e9
-				
-		.github
-			right .5em
-			text-decoration none
-			top 2.7em
-			&:before
-				content "\e609"
-			&:hover
-				color gris
-				text-decoration none
-
-		.email
-			right .5em
-			text-decoration none
-			top 4.7em
-			&:before
-				content "\e602"
-			&:hover
-				color #f6ca2d
-
-nav
-	overflow-x hidden
-	position relative
-	z-index 5
-
-p
-	line-height 1.4
-	margin .5em 1em
-	&:first-child 
-		margin 0 1em 0 1em
-
-section
-	background #dcdcdc
-	margin -.6em .0
-	padding .6em 0
-
-#mm0
-	background azul
-	border .5px solid rgba(azul,.05)
-	color white
-	font-size 1.5em
-	height 2em
-	left -5px
-	position relative
-	width 109%
-
-.arriba
-	bottom 1em
-	color white
-	left 1em
-	opacity .95
-	position fixed
-	-webkit-transition all .1s ease
-	transition all .1s ease
-	z-index 10
-	a 
-		background #d9d9d9
-		border-radius 50%
-		color: white;
-		display block
-		height 3em
-		position relative
-		text-decoration none
-		transition all .2s ease
-		-webkit-transition all .2s ease
-		width 3em
-		&:after
-			content "\e608"
-			font-family icono
-			font-size 2em
-			text-align center
-			position absolute
-			top .2em
-			left .45em
-		&:hover
-			background gris
-
-.autor
-	color grey
-	font-family mayuscula
-	font-weight none
-	margin 0 .5em 1em .5em
-	text-align center
-
-.caja
-	background claro
-	border 1px solid borde
-	border-radius 4px
-	box-shadow 0 2px 5px rgba(black,.3)
-	display inline-block
-	margin 0 .2em
-	vertical-align top
-	width 90%
-	&:first-child
-		margin 0 .2em 1em 1em
-	&:last-child
-		margin 0 1em 1em .2em
-	.autor
-	.fecha
-	.resumen
-		margin 1em
-		font-size .8em
-		white-space normal
-
-.contenedor_imagen
-	background white
-	border-bottom 1px solid borde 
-	border-top 1px solid borde 
-	height 15em
-	img 
-		display block
-		height auto
-		margin 1em auto 1em auto
-		width 10em
-	span
-		display block
-		margin -.5em 0 0 7.5em
-	.guia
-		display block
-		font-size 10em
-		margin .15em 0 0 .45em
-		text-decoration none
-		&:after
-			color gris
-			content "\e605"
-			font-family icono
-	&:hover
-		background claro
-
-.contenedor_video
-	height 0
-	overflow hidden
-	padding-bottom 56.25%
-	padding-top 30px
-	position relative
-	iframe
-		height 100%
-		left 0px
-		position absolute
-		top 0px
-		width 100%
-
-.encabezado
-	margin 0 0 1em 0
-	.numero
-		background azul
-		color fondo
-		float left
-		font-family mayuscula
-		font-size .5em
-		font-weight bold
-		height 1.7em 
-		line-height 1.5
-		margin 1em 1.5em 0 0
-		padding .15em 0 0 0 
-		position relative
-		text-align center
-		width 2em 
-		z-index 0
-		&:after
-			border-top solid 0 transparent
-			border-left solid .7em azul
-			border-bottom solid 1.8em transparent
-			border-right solid 0 transparent
-			content ""
-			left 2em
-			position absolute
-			top 0px
-
-	.nombre
-		display block
-		line-height 1em
-		margin .4em .5em 0 2em
-		text-align left
-
-.horizontal
-	overflow-x auto
-	white-space nowrap
-	&::-webkit-scrollbar
-		display none
-
-.lista
-	color white
-	font-size 1.7em
-	position absolute
-	right .5em
-	top .4em
-	width 30px
-	&:after
-		content "\e60a"
-		font-family icono
-
-.fecha
-	color grey
-
-.fixed 
-	box-shadow 0 2px 2px rgba(azul,.5)
-	left 0px
-	position fixed
-	right 0px
-	top -1px
-
-.puntos
-	color grey
-	display block
-	font-size 1.2em
-	text-align center
-	&:after
-		content "\e60b"
-		font-family icono
+@media screen and (max-width: 1000px) 
+	@import "bp2.styl"
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media screen and (max-width: 480px) 
+	@import "bp1.styl"
