--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -4,7 +4,7 @@ article
 	background white
 	border-radius 5px
 	box-shadow 0 1px 0 rgba(black,.2)
-	margin .6em .5em
+	margin 1em
 	padding 0 0 1em 0
 	
 body 
@@ -149,9 +149,9 @@ nav
 
 p
 	line-height 1.4
-	margin .5em 1em
+	margin .5em 2em
 	&:first-child 
-		margin 0 1em 0 1em
+		margin 0 2em 0 2em
 
 section
 	background #dcdcdc
@@ -213,45 +213,39 @@ section
 	border-radius 4px
 	box-shadow 0 2px 5px rgba(black,.3)
 	display inline-block
-	margin 1em
+	margin 0 .8em 1em .8em
 	vertical-align top
-	width 40%
-	&:nth-child(odd)
-		margin 1em 1em 1em 4em
-
-	// &:first-child
-	// 	margin 0 .2em 1em 1em
-	// &:last-child
-	// 	margin 0 1em 1em .2em
-	// .autor
-	// .fecha
-	// .resumen
-	// 	margin 1em
-	// 	font-size .8em
-	// 	white-space normal
+	width 45%
 
 .contenedor_imagen
 	background white
 	border-bottom 1px solid borde 
 	border-top 1px solid borde 
 	height 15em
+	text-align center
 	img 
 		display block
 		height auto
 		margin 1em auto 1em auto
 		width 10em
 	span
-		display block
-		margin -.5em 0 0 7.5em
+		background orange
+		border-radius 3px
+		color claro
+		font-family mayuscula
+		font-size 1em
+		padding .1em .5em
 	.guia
 		display block
 		font-size 10em
-		margin .15em 0 0 .45em
+		margin .07em 0 0 0 
 		text-decoration none
+		width 100%
 		&:after
 			color gris
 			content "\e605"
 			font-family icono
+
 	&:hover
 		background claro
 
@@ -302,7 +296,11 @@ section
 		text-align left
 
 .horizontal
-	// background red
+	margin 0 auto
+	padding 0 0 0 1em
+	width 90%
+	white-space normal
+
 .lista
 	color white
 	font-size 1.7em
@@ -326,14 +324,6 @@ section
 
 .puntos
 	display none
-	// color grey
-	// display block
-	// font-size 1.2em
-	// text-align center
-	// &:after
-	// 	content "\e60b"
-	// 	font-family icono
-
 
 
 
