--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@
     background: #fff;
     border-radius: 5px;
     box-shadow: 0 1px 0 rgba(0,0,0,0.2);
-    margin: 0.6em 0.5em;
+    margin: 1em;
     padding: 0 0 1em 0;
   }
   body {
@@ -168,10 +168,10 @@
   }
   p {
     line-height: 1.4;
-    margin: 0.5em 1em;
+    margin: 0.5em 2em;
   }
   p:first-child {
-    margin: 0 1em 0 1em;
+    margin: 0 2em 0 2em;
   }
   section {
     background: #dcdcdc;
@@ -236,18 +236,16 @@
     border-radius: 4px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     display: inline-block;
-    margin: 1em;
+    margin: 0 0.8em 1em 0.8em;
     vertical-align: top;
-    width: 40%;
-  }
-  .caja:nth-child(odd) {
-    margin: 1em 1em 1em 4em;
+    width: 45%;
   }
   .contenedor_imagen {
     background: #fff;
     border-bottom: 1px solid #c6cfd3;
     border-top: 1px solid #c6cfd3;
     height: 15em;
+    text-align: center;
   }
   .contenedor_imagen img {
     display: block;
@@ -256,14 +254,19 @@
     width: 10em;
   }
   .contenedor_imagen span {
-    display: block;
-    margin: -0.5em 0 0 7.5em;
+    background: #ffa500;
+    border-radius: 3px;
+    color: #ebf0f4;
+    font-family: lucida grande;
+    font-size: 1em;
+    padding: 0.1em 0.5em;
   }
   .contenedor_imagen .guia {
     display: block;
     font-size: 10em;
-    margin: 0.15em 0 0 0.45em;
+    margin: 0.07em 0 0 0;
     text-decoration: none;
+    width: 100%;
   }
   .contenedor_imagen .guia:after {
     color: #343434;
@@ -322,6 +325,12 @@
     margin: 0.4em 0.5em 0 2em;
     text-align: left;
   }
+  .horizontal {
+    margin: 0 auto;
+    padding: 0 0 0 1em;
+    width: 90%;
+    white-space: normal;
+  }
   .lista {
     color: #fff;
     font-size: 1.7em;
@@ -349,6 +358,16 @@
   }
 }
 @media screen and (max-width: 480px) {
+  article {
+    margin: 0.6em 0.5em;
+  }
+  p {
+    line-height: 1.4;
+    margin: 0.5em 1em;
+  }
+  p:first-child {
+    margin: 0 1em 0 1em;
+  }
   .caja {
     background: #ebf0f4;
     border: 1px solid #c6cfd3;
@@ -373,10 +392,23 @@
     white-space: normal;
   }
   .horizontal {
+    margin: 0;
     overflow-x: auto;
+    padding: 0;
+    width: 100%;
     white-space: nowrap;
   }
   .horizontal::-webkit-scrollbar {
     display: none;
+  }
+  .puntos {
+    color: #808080;
+    display: block;
+    font-size: 1.2em;
+    text-align: center;
+  }
+  .puntos:after {
+    content: "\e60b";
+    font-family: icono;
   }
 }
