Estilado footer vista tablet

--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -54,21 +54,21 @@ header
 
 footer
 	background azul
-	height 10em
+	height 4.5em
 	.avatar
 		background white
 		display inline-block
 		float left
-		height 10em
+		height 4.5em
 		position relative
-		width 9.5em
+		width 17.5em
 		&:after
-			border-bottom solid 10em transparent
-			border-left solid 5em white
-			border-right solid 10px transparent
+			border-bottom solid 4.5em transparent
+			border-left solid 2.2em white
+			border-right solid 4px transparent
 			border-top solid 0 green
 			content ""
-			left 9.5em
+			left 17.5em
 			position absolute
 			top 0px
 		img
@@ -76,20 +76,20 @@ footer
 			border-radius 50%
 			box-shadow 0 0 2px black
 			height auto
-			left 1em
+			left 5em
 			position absolute
-			top 1em
+			top .7em
 			width 3em
 			z-index 5
 
 		p
 			color gris
 			font-size 1em
-			left 4em
+			left 7.5em
 			line-height 1.1em;
 			position absolute
 			text-align left
-			top 1.5em
+			top 1.3em
 			white-space nowrap
 			z-index 4
 
@@ -116,16 +116,16 @@ footer
 		.twitter
 			right .5em
 			text-decoration none
-			top .7em
+			top .8em
 			&:before
 				content "\e606"
 			&:hover
 				color #21b2e9
 				
 		.github
-			right .5em
+			right 3em
 			text-decoration none
-			top 2.7em
+			top .8em
 			&:before
 				content "\e609"
 			&:hover
@@ -133,9 +133,9 @@ footer
 				text-decoration none
 
 		.email
-			right .5em
+			right 5.7em
 			text-decoration none
-			top 4.7em
+			top .8em
 			&:before
 				content "\e602"
 			&:hover
@@ -155,8 +155,8 @@ p
 
 section
 	background #dcdcdc
-	margin -.6em .0
-	padding .6em 0
+	margin -.6em 0
+	padding .6em 0 4em 0
 
 #mm0
 	background azul
