--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -8,6 +8,100 @@ p
 	&:first-child 
 		margin 0 1em 0 1em
 
+footer
+	background azul
+	height 10em
+	.avatar
+		background white
+		display inline-block
+		float left
+		height 10em
+		position relative
+		width 9.5em
+		&:after
+			border-bottom solid 10em transparent
+			border-left solid 5em white
+			border-right solid 10px transparent
+			border-top solid 0 green
+			content ""
+			left 9.5em
+			position absolute
+			top 0px
+		img
+			border 2px solid white
+			border-radius 50%
+			box-shadow 0 0 2px black
+			height auto
+			left 1em
+			position absolute
+			top 1em
+			width 3em
+			z-index 5
+
+		p
+			color gris
+			font-size 1em
+			left 4em
+			line-height 1.1em;
+			position absolute
+			text-align left
+			top 1.5em
+			white-space nowrap
+			z-index 4
+
+	.social
+		position relative
+		// text-shadow 1px 1px 0px rgba(black,.5)
+		z-index 3
+		a
+			color white
+			font-family texto
+			font-size 1.5em
+			font-weight bold
+		.twitter
+		.github
+		.email
+			position absolute
+			transition all .2s ease
+			-webkit-transition all .2s ease
+			&:before
+				font-family icono
+				margin 0 .5em 0 0
+				vertical-align bottom
+
+		.twitter
+			right .5em
+			text-decoration none
+			top .7em
+			&:before
+				content "\e606"
+			&:hover
+				color #21b2e9
+				
+		.github
+			right .5em
+			text-decoration none
+			top 2.7em
+			&:before
+				content "\e609"
+			&:hover
+				color gris
+				text-decoration none
+
+		.email
+			right .5em
+			text-decoration none
+			top 4.7em
+			&:before
+				content "\e602"
+			&:hover
+				color #f6ca2d
+
+section
+	background #dcdcdc
+	margin -.6em .0
+	padding .6em 0
+
 .caja
 	background claro
 	border 1px solid borde
