--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -111,9 +111,11 @@ section
 	.resumen
 		padding 1em
 	.autor
+		color grey
 		margin-bottom 0
 		padding 0 0 0 1em
 	.fecha
+		color grey
 		margin 0 1em
 		padding 0 0 0 1em
 	h3
