--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -52,21 +52,21 @@ header
 
 footer
 	background azul
-	height 4.5em
+	height 10em
 	.avatar
 		background white
 		display inline-block
 		float left
-		height 4.5em
+		height 10em
 		position relative
-		width 17.5em
+		width 9.5em
 		&:after
-			border-bottom solid 4.5em transparent
-			border-left solid 2.2em white
-			border-right solid 4px transparent
+			border-bottom solid 10em transparent
+			border-left solid 5em white
+			border-right solid 10px transparent
 			border-top solid 0 green
 			content ""
-			left 17.5em
+			left 9.5em
 			position absolute
 			top 0px
 		img
@@ -74,23 +74,22 @@ footer
 			border-radius 50%
 			box-shadow 0 0 2px black
 			height auto
-			left 5em
+			left 1em
 			position absolute
-			top .7em
+			top 1em
 			width 3em
 			z-index 5
 
 		p
 			color gris
 			font-size 1em
-			left 7.5em
+			left 4em
 			line-height 1.1em;
 			position absolute
 			text-align left
-			top 1.3em
+			top 1.5em
 			white-space nowrap
 			z-index 4
-
 	.social
 		position relative
 		// text-shadow 1px 1px 0px rgba(black,.5)
@@ -114,16 +113,16 @@ footer
 		.twitter
 			right .5em
 			text-decoration none
-			top .8em
+			top .7em
 			&:before
 				content "\e606"
 			&:hover
 				color #21b2e9
 				
 		.github
-			right 3em
+			right .5em
 			text-decoration none
-			top .8em
+			top 2.7em
 			&:before
 				content "\e609"
 			&:hover
@@ -131,9 +130,9 @@ footer
 				text-decoration none
 
 		.email
-			right 5.7em
+			right .5em
 			text-decoration none
-			top .8em
+			top 4.7em
 			&:before
 				content "\e602"
 			&:hover
@@ -154,7 +153,7 @@ p
 section
 	background #dcdcdc
 	margin -.6em 0
-	padding .6em 0 4em 0
+	padding .6em 0 2em 0
 
 #mm0
 	background azul
