Estilado guía en vista tablet

--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -290,7 +290,7 @@ section
 		h3
 			background white
 			color gris
-			left .8em
+			left 2.2em
 			padding 1em
 			position relative
 			top -3.55em
@@ -305,10 +305,14 @@ section
 	.contenedor_imagen
 		img
 			box-shadow 0 10px 30px rgba(black,.3)
-			left 7.5em
+			left 6em
 			position relative
 			top -2.9em
 			width 9em
+	h3
+		display block
+		margin-left -1.5em
+
 		
 
 
