Empezando de nuevo con el estilo de los videos y libros

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -1,6 +1,12 @@
 
 article
 	margin .6em .5em
+	.contenido
+		background claro
+		border-bottom 1px solid borde
+		border-top 1px solid borde
+		margin 2em 0 
+		padding 1em
 
 p
 	line-height 1.4
@@ -122,3 +128,5 @@ section
 		font-size 1.5em
 		margin 1em .5em
 		text-align center
+
+
