--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -41,10 +41,14 @@ article
 		background claro
 		border-bottom 1px solid borde
 		border-top 1px solid borde
-		margin 2em 0 
+		margin 1em 0 
 		padding 1em
 		.video
+			margin 2em 0 2em 0
+			&:last-child
+				margin 2em 0 1em 0
 			.contenedor
+				box-shadow 0 0 5px rgba(black,.5)
 				height 0
 				overflow hidden
 				padding-bottom 56.25%
@@ -56,6 +60,14 @@ article
 					position absolute
 					top 0
 					width 100%
+			p
+				border-top 1px solid white
+				box-shadow 0 -1px 0 borde
+				font-family mayuscula
+				font-size 1.3em
+				letter-spacing -2px
+				margin 1em 0 0 0 
+				padding .2em 0 0 0 
 
 
 p
